src/components/layout.css
.article-read-more {
    display: flex;
    justify-content: flex-end;
}
h1 {
  font-size: 2.5rem;
}
h2 {
  font-size: 2rem;
}
a h3 {
    text-decoration: none;
    color: black;
    font-size: 1.5rem;
    margin-bottom: 0.3rem;
}

header {
  margin-top: 1rem;
}
.site-title {

}
.site-description {
  margin-top: -1rem;
  margin-bottom: 0px;
  text-align: center;
}

p:first-child:first-letter {
  float: left;
  font-family: Georgia;
  font-size: 3.25rem;
  line-height: 3.25rem;
  padding-top: 0px;
  padding-right: 0.5rem;
  padding-left: 0px;
}

a {
    color: red;
    text-decoration: none;
  }
  
  a:hover {
    text-decoration: underline;
  }
  
  a:active {
    color: black;
  }
  
  a:visited {
    color: red;
  }
  
  
.bordered-title-bar {
    display: inline-block;
    position: relative;
    width: 100%;
    margin-bottom: 1.5rem;
}
.bordered-title-bar h4 {
    display: block;
    position: absolute;
    background-color: white;
    padding-right: 5px;
    text-transform: uppercase;
}

.bordered-title-bar div {
    display: block;
    border-bottom-style: solid;
    border-bottom-width: thin;
    margin-top: 10.5px;
}

.latest-writings-item {
  min-width:259px;
  margin: 1rem;
  font-size: smaller;
  display: flex;
  flex-direction: row;
}

.latest-writings-item-topic {
  align-self: center;
}

.latest-writings-item-image {
  align-self: center;
  padding-right: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.archive-description {
  margin: 1rem;
}
.archive-article-item {
  margin: 1rem;
  font-size: smaller;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.archive-article-item:nth-of-type(odd) {
  border-right: 1px solid lightslategray;
  margin-right: 0px;
  padding-right: 2rem;
}

.archive-article-item-summary {
  display: none;
}

.archive-article-item-topic {
  align-self: center;
}

.archive-article-item-image {
  align-self: center;
  padding-left: 2rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.about-me-text {
  margin: 1rem;
}
.about-me-image {
    float: right;
    width: 16%;
    min-width: 96px;
    margin-left: 3rem;
    margin-right: 1rem;
  }

.article .gatsby-image-wrapper {
min-width: 100px;  max-width: 200px;
  float: left;
  margin-right: 0.5rem;
  filter: grayScale(100%);
  filter: opacity(.8);
  margin-top: 8px;
}

.gatsby-image-wrapper .picture img {
  object-fit: contain;
  height: inherit;
  width: inherit;
}

.archive {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 1rem;
    grid-auto-flow: dense;
    font-size: normal;
  }

  .article .article-topic {
    text-transform: uppercase;
  }

  .article p {
    margin-bottom: 0px;
  }

  .archive .article {
  }

  .post-summary {
    display:initial;
    font-size: smaller;
  }

  .article-read-more {
    display: none;
    float: right;
    font-size: smaller;
  }

  /* Single column display for phones */
  @media (max-width: 459px) {
   
    .archive {
      display: flex;
      flex-direction: column;
    }

    
  }

  @media (max-width: 620px) {
    h1 {
      font-size: 1.5rem;
    }
    .site-description {
      font-size: smaller;
    }
    .about-me-image {
    }
    .article .gatsby-image-wrapper {
      display: none;
    }

   
  }

  @media (max-width: 756px) {

    .latest-writings-item {
      margin-right: 0px;
      margin-left: 0px;
      padding-right: 0.5rem;
    }

    .latest-writings-item-image {
      margin-right: 0px;
      margin-left: 0px;
      padding-right: 0.5rem;
    }
    .latest-writings-item-image .gatsby-image-wrapper {
      margin-right: 0px;
      margin-left: 0px;
      padding-right: 0.5rem;
      max-width: 96px;
    }
    .archive-article-item:nth-of-type(odd) {
      border-right: none;
      margin-right: 1rem;
      padding-right: 0px;
    }

    .archive {
      display: grid;
      grid-template-columns: 1fr;
    }
  }

